// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDetails snapshot Product active and with neutral ROI 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-186"
      >
        Name
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-187"
      >
        Product
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-188"
      >
        Category
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-189"
      >
        <div
          className="MuiChip-root"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          >
            
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-190"
      >
        Provider price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-191"
      >
        2.00 €
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-192"
      >
        Sale price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-193"
      >
        <div
          className="MuiBox-root MuiBox-root-194"
        >
          2.00 €
           
          <div
            className="MuiChip-root makeStyles-neutral-147 MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              <div
                className="MuiBox-root MuiBox-root-195"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 17l5-5-5-5v10z"
                  />
                </svg>
                0.00
                 €
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-196"
      >
        Insertion date
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-197"
      >
        3/12/2020
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-198"
      >
        Barcode
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-199"
      >
        <div
          className="MuiBox-root MuiBox-root-200"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-201"
      >
        State
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-202"
      >
        <div
          className="MuiBox-root MuiBox-root-203 makeStyles-active-166"
        >
          <span
            className="MuiBadge-root makeStyles-statusBadge-168"
          >
            <span
              className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
            >
               
            </span>
          </span>
          <span
            className="makeStyles-statusMessage-169"
          >
            Active
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductDetails snapshot Product active and with positive ROI 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-107"
      >
        Name
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-108"
      >
        Product
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-109"
      >
        Category
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-110"
      >
        <div
          className="MuiChip-root"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          >
            
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-141"
      >
        Provider price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-142"
      >
        2.00 €
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-143"
      >
        Sale price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-144"
      >
        <div
          className="MuiBox-root MuiBox-root-145"
        >
          7.50 €
           
          <div
            className="MuiChip-root makeStyles-positive-146 MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              <div
                className="MuiBox-root MuiBox-root-149"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 14l5-5 5 5z"
                  />
                </svg>
                5.50
                 €
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-159"
      >
        Insertion date
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-160"
      >
        3/12/2020
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-161"
      >
        Barcode
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-162"
      >
        <div
          className="MuiBox-root MuiBox-root-163"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-164"
      >
        State
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-165"
      >
        <div
          className="MuiBox-root MuiBox-root-170 makeStyles-active-166"
        >
          <span
            className="MuiBadge-root makeStyles-statusBadge-168"
          >
            <span
              className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
            >
               
            </span>
          </span>
          <span
            className="makeStyles-statusMessage-169"
          >
            Active
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductDetails snapshot Product inactive and with negative ROI 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-204"
      >
        Name
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-205"
      >
        Product
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-206"
      >
        Category
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-207"
      >
        <div
          className="MuiChip-root"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          >
            
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-208"
      >
        Provider price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-209"
      >
        2.00 €
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-210"
      >
        Sale price
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-211"
      >
        <div
          className="MuiBox-root MuiBox-root-212"
        >
          1.75 €
           
          <div
            className="MuiChip-root makeStyles-negative-148 MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              <div
                className="MuiBox-root MuiBox-root-213"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                0.25
                 €
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-214"
      >
        Insertion date
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-215"
      >
        3/12/2020
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-216"
      >
        Barcode
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-217"
      >
        <div
          className="MuiBox-root MuiBox-root-218"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-gridRow-104 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
    >
      <div
        className="MuiBox-root MuiBox-root-219"
      >
        State
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-rowContent-105 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiBox-root MuiBox-root-220"
      >
        <div
          className="MuiBox-root MuiBox-root-221 makeStyles-inactive-167"
        >
          <span
            className="MuiBadge-root makeStyles-statusBadge-168"
          >
            <span
              className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
            >
               
            </span>
          </span>
          <span
            className="makeStyles-statusMessage-169"
          >
            Inactive
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
